--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               </ul> 
             
               <h3> Technical Recruiter <h3>
-            <h4> SDK Software, 2008 - 2010</h4>
+            <h4> SDK Software, 2008 - 2010</h4><img src="https://media.licdn.com/media/p/4/000/157/08d/09ca7cc.png" HEIGHT="60" WIDTH="60"/>
                 <ul> 
             <li>Source, qualify, interview and present top technical and functional talent in response to short and long term client Information Technology and Engineering project requirements</li>
             <li>Provide excellent client service and effective communication to Target Corp., General Mills and Travelers Insurance HR procurement teams and hiring managers as company point of contact</li>
