--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
      <body>
       <h1>Resume of Ben Sjostrom</h1>
       <h3>Future Software Engineer</h3>
-       <p> Check out my <a href="https://www.linkedin.com/in/bensjostrom?authType=name&authToken=w4jU"> my LinkedIn Profile <a/> 
+       <p> Check out my <a href="https://www.linkedin.com/in/bensjostrom?"> my LinkedIn Profile <a/> 
          <br>
          <br>
          <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAL-AAAAJDIyNDUxMTlkLWNiMzgtNGY2Ny1iODE1LWViYjM1Nzk4OTA0MA.jpg"  HEIGHT="120" WIDTH="120" BORDER="20"/>
