--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <li>Extensive consultant contract negotiation</li>
                 </ul> 
                  
-                <img src="https://media.licdn.com/media/p/5/005/05c/3a0/1cbf6f3.png" HEIGHT="60" WIDTH="60"/><h3> Project Coordinator </h3>
+                <img src="https://media.licdn.com/media/p/5/005/05c/3a0/1cbf6f3.png" HEIGHT="60" WIDTH="60"/><h3> Payment Analyst/Project Coordinator </h3>
                 <h4> PayPal, Inc., 2004 - 2007</h4>
                 
              <ul> 
