--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <title>GitHub Page </title>
     <link rel="stylesheet" href="style.css"/>
   </head> 
+  <style>a:visited {color: green}</style>
      <body>
-       
+      
         <div class="hero">
       <h1>Resume of Ben Sjostrom</h1>
       <h3>Future Software Engineer</h3>
