--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>GitHub Page </title>
     <link rel="stylesheet" href="style.css"/>
   </head> 
-  <style>a:visited {color: black}</style>
+  <style>a:visited {color: orange}</style>
      <body>
       
         <div class="hero">
